Solve overflow issues on sportmapp provider and venues screen

--- a/pages/sportmapp/sportmapp.module.scss
+++ b/pages/sportmapp/sportmapp.module.scss
@@ -12,7 +12,9 @@
 }
 
 .content {
-  padding: 0 2.5rem;
+  padding: 0 2.5rem 2.5rem 2.5rem;
+  overflow: auto;
+  height: 85vh;
 
   h2 {
     font-size: 18px;
